--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.rey5137:material:1.2.4'
 }
